--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Clifftech123/leetcode_DSA_problmes.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "clifftech123",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Clifftech123/leetcode_DSA_problmes/issues"
